--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -5,6 +5,7 @@
   <button
     class="btn btn-primary"
     type="button"
+    [disabled]="!admissions.filteredData.length"
     (click)="exportVisible()"
   >Exportovať viditeľné údaje</button>
 
@@ -17,6 +18,7 @@
   <button
     class="btn btn-primary"
     type="button"
+    [disabled]="!admissions.filteredData.length"
     (click)="exportFiltered()"
   >Exportovať vyfiltrované údaje</button>
 </div>
