vytvorené ŠZS, získané dáta z be, model Exam, session, ošetrený import

--- a/bakalarka-frontend/src/app/pages/accounts/components/accounts-list/accounts-list.component.html
+++ b/bakalarka-frontend/src/app/pages/accounts/components/accounts-list/accounts-list.component.html
@@ -29,7 +29,7 @@
     <td mat-cell *matCellDef="let admin">
       <button type="submit" color="primary" [disabled]="!admin.admin" (click)="onRemoveAdminClickNotify(admin.email)"
         mat-raised-button>
-        Zmazať admin právo
+        Zrušiť admin právo
       </button>
 
       <button type="submit" color="primary" [disabled]="admin.admin" (click)="onAddAdminClickNotify(admin.email)"
