--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -29,7 +29,7 @@
           </div>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/statnice">ŠZS</a>
+          <a class="nav-link" routerLink="/statefinalexams">ŠZS</a>
         </li>
 
         <!-- *ngIf="authService.loggedIn" -->
