management prihlášok, zmazanie years block komponentu (nepouzivane)

--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -26,6 +26,8 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" routerLink="/admissions/bachelor">Bakalársky stupeň</a>
             <a class="dropdown-item" routerLink="/admissions/master">Inžiniersky stupeň</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" routerLink="/admissions/management">Manažment prijímacieho konania</a>
           </div>
         </li>
         <li class="nav-item" routerLinkActive="active">
