hromadné vymazávanie prihlášok (všetky naraz, alebo po rokoch)

--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -5,7 +5,7 @@
   <button
     class="btn btn-primary"
     type="button"
-    [disabled]="!admissions.filteredData.length"
+    [disabled]="admissions && !admissions.filteredData.length"
     (click)="exportVisible()"
   >Exportovať viditeľné údaje</button>
 
@@ -18,7 +18,7 @@
   <button
     class="btn btn-primary"
     type="button"
-    [disabled]="!admissions.filteredData.length"
+    [disabled]="admissions && !admissions.filteredData.length"
     (click)="exportFiltered()"
   >Exportovať vyfiltrované údaje</button>
 </div>
