--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!admissions.length" class="spinner-wrapper" flex>
+<div *ngIf="loading" class="spinner-wrapper" flex>
     <mat-spinner></mat-spinner>
 </div>
 
