--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -2,6 +2,20 @@
   <h1 class="display-4">Prijímacie konanie</h1>
   <p class="lead">Bakalársky stupeň</p>
   <hr class="my-4">
+
+  <h6>Export všetkých tabuliek</h6>
+
+  <button
+    class="btn btn-primary"
+    type="button"
+    [disabled]="admissions && !admissions.filteredData.length"
+    (click)="exportAllTables()"
+  >Exportovať všetky tabuľky</button>
+
+  <hr class="my-4">
+
+  <h6>Export prihlášok</h6>
+
   <button
     class="btn btn-primary"
     type="button"
