--- a/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams/state-final-exams.component.html
+++ b/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams/state-final-exams.component.html
@@ -1,4 +1,6 @@
 <div>
+  <h2>Vyhodnotenie štátnych záverečných skúšok</h2>
+  <p>Tabuľka obsahuje údaje z roku:  {{ data ? data[0].obdobie : 'Dáta nie sú importované' }} </p>
 
   {{ data ? data[0].AIS_ID : '' }}
   
