--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -288,7 +288,7 @@
           <th scope="col">Kraj</th>
           <th scope="col">Medián</th>
           <th scope="col">Priemer bodov</th>
-          <th scope="col">Počet študentov</th>
+          <th scope="col">Počet prihlášok</th>
         </tr>
       </thead>
       <tbody>
