--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -20,6 +20,8 @@
           <mat-radio-button value="AdmissionsPoints">Prijímačky - body</mat-radio-button>
           <mat-radio-button value="StateExamsOverviews">Štátnice - prehľad</mat-radio-button>
           <mat-radio-button value="StateExamsScenarios">Štátnice - scenáre</mat-radio-button>
+          <mat-radio-button value="StudentsDataPt1">Dáta o študentoch - časť 1</mat-radio-button>
+          <mat-radio-button value="StudentsDataPt2">Dáta o študentoch - časť 2</mat-radio-button>
         </mat-radio-group>
       </div>
 
