--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -80,6 +80,15 @@
   </section>
 
   <button
+    mat-raised-button
+    color="primary"
+    [disabled]="!selectedImportAttrs.length || !selectedFileAttrs.length"
+    (click)="openAttrMapping()"
+  >
+    Mapovanie atribútov
+  </button>
+
+  <button
     class="btn-lg float-right"
     mat-raised-button
     color="primary"
@@ -99,7 +108,7 @@
     <div class="icon-wrapper danger" margin-right>
       <i class="far fa-times-circle"></i>
     </div>
-    Pri importovaní dát nastala chyba. Problémom môže byť nesprávna štruktúra zvoleného xlsx súboru.
+    Pri importovaní dát nastala chyba. Problémom môže byť nesprávna štruktúra zvoleného xlsx súboru. Problémom môže byť aj chybné mapovanie atribútov.
   </div>
 
   <div
